Bug 481585 - Cannot send a file via Bluetooth applet
Summary: Cannot send a file via Bluetooth applet
Status: RESOLVED FIXED
Alias: None
Product: Bluedevil
Classification: Unmaintained
Component: system tray (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-20 17:30 UTC by Patrick Silva
Modified: 2024-02-20 21:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2024-02-20 17:30:22 UTC
STEPS TO REPRODUCE
1. pair a laptop and an android phone via bluetooth
2. click on the bluetooth icon in the system tray
3. click on the paired android phone
4. click on "Send file" button

OBSERVED RESULT
cannot choose a file to send because the file open dialog opens and closes immediately

EXPECTED RESULT
we can choose a file to send

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 6.0.80
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.1
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2024-02-20 19:49:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/bluedevil/-/merge_requests/158
Comment 2 Nicolas Fella 2024-02-20 21:10:35 UTC
Git commit 26b5f0302d8b9d32c7eafbc7cc45e8bd3fb877d2 by Nicolas Fella.
Committed on 20/02/2024 at 19:48.
Pushed by nicolasfella into branch 'master'.

[wizard] Disable quitlock

setQuitOnLastWindowClosed is not enough any more since Qt6

M  +1    -0    src/sendfile/main.cpp

https://invent.kde.org/plasma/bluedevil/-/commit/26b5f0302d8b9d32c7eafbc7cc45e8bd3fb877d2
Comment 3 Nicolas Fella 2024-02-20 21:11:08 UTC
Git commit 31a96b87f61496d5ada816b9e3f34db0aa4dbe98 by Nicolas Fella.
Committed on 20/02/2024 at 21:10.
Pushed by nicolasfella into branch 'Plasma/6.0'.

[wizard] Disable quitlock

setQuitOnLastWindowClosed is not enough any more since Qt6
(cherry picked from commit 26b5f0302d8b9d32c7eafbc7cc45e8bd3fb877d2)

M  +1    -0    src/sendfile/main.cpp

https://invent.kde.org/plasma/bluedevil/-/commit/31a96b87f61496d5ada816b9e3f34db0aa4dbe98