[wizard] Disable quitlock

setQuitOnLastWindowClosed is not enough any more since Qt6

BUG: 481585